--- a/src/pages/care-plan/su-create/dependencies.html
+++ b/src/pages/care-plan/su-create/dependencies.html
@@ -9,7 +9,9 @@
 
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
