added in resize behaviors for different template views (edit, simple, multi) need to move su-resize to simple later... hooked up su-goals multi and edit views to correlating resize behaviors.

--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html" />
-<link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html" />
 <script>
 
   (function(){
@@ -84,12 +83,55 @@
         if(this.page==="su-create"){
           var appGridColumns="2";
           if(dimensions.base.query900){
-            appGridColumns="2";
+            appGridColumns="1";
           };
           this.customStyle["--app-grid-columns"]=appGridColumns;
           this.updateStyles();
         };
         if(this.page==="su-goals"){
+
+          var mainFabPosition="absolute";
+          var mainFabTop="-25px";
+          var mainFabRight="-25px";
+          var mainFabBottom="unset";
+
+          if(dimensions.base.query640){
+
+            mainFabPosition="fixed";
+            mainFabTop="unset";
+            mainFabBottom="5%";
+            mainFabRight="5%";
+
+          } else if(dimensions.base.query750){
+
+            mainFabPosition="absolute";
+            mainFabTop="-25px";
+            mainFabBottom="unset";
+            mainFabRight="-25px";
+
+          } else if(dimensions.base.query900){
+
+            mainFabPosition="absolute";
+            mainFabTop="-25px";
+            mainFabBottom="unset";
+            mainFabRight="-25px";
+
+          } else if(dimensions.base.query1100){
+
+            mainFabPosition="absolute";
+            mainFabTop="-25px";
+            mainFabBottom="unset";
+            mainFabRight="-25px";
+
+          };
+
+          //fab style
+          this.customStyle["--main-fab-position"]=mainFabPosition;
+          this.customStyle["--main-fab-top"]=mainFabTop;
+          this.customStyle["--main-fab-right"]=mainFabRight;
+          this.customStyle["--main-fab-bottom"]=mainFabBottom;
+
+          this.updateStyles();
 
         };
         if(this.page==="su-medical"){
