--- a/src/pages/care-plan/su-goals/dependencies.html
+++ b/src/pages/care-plan/su-goals/dependencies.html
@@ -21,10 +21,12 @@
 <link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-new-goal-modal/guuey-new-goal-modal.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
 <link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
 <link rel="import" href="../../../behaviors/su-print-behavior.html" />
+<link rel="import" href="../../../behaviors/su-resize-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
 
