--- a/src/pages/care-plan/su-goals/su-goals-multi-view.html
+++ b/src/pages/care-plan/su-goals/su-goals-multi-view.html
@@ -10,7 +10,10 @@
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
 
-<link rel="import" href="../../../behaviors/multi-edit-behavior.html" />
+<link rel="import" href="../../../elements/media-queries/media-queries.html" />
+
+<link rel="import" href="../../../behaviors/multi-view-resize-behavior.html" />
+<link rel="import" href="../../../behaviors/multi-edit-animation-behavior.html" />
 
 <link rel="import" href="../../../styles/common-styles.html" />
 
@@ -18,133 +21,136 @@
 
   <template>
 
-  <style include="common-styles">
-    :host{
-      --app-grid-columns:3;
-      --app-grid-item-height:150%;
-    }
+    <media-queries
+      dimensions="{{dimensions}}">
+    </media-queries>
 
-    .goalLabel{
-      width:25%;
-      position:absolute;
-      bottom:10px;
-      left:10px;
-      padding:0px;
-      margin:0px;
-      font-weight:bold;
-      color:#FFFFFF;
-      font-size:20px;
-    }
-    .goalMore{
-      position:absolute;
-      top:10px;
-      right:10px;
-      color:#FFFFFF;
-    }
-    .goalBox{
-      margin:20px;
-    }
-    .goalHeading{
-      width:100%;
-      height:40%;
-      margin-bottom:4%;
-      position:relative;
-      background-repeat:no-repeat;
-      background-size:cover;
-      background-position:bottom right;
-    }
-    .goalDescription{
-      text-align:center;
-      font-size:18px;
-      height:38%;
-      margin:4%;
-      overflow:hidden;
-    }
-    .goalSteps:{
-      width:100%;
-      height:10%;
-      margin:4%;
-    }
-    .goalStepsText{
-      position:absolute;
-      bottom:5%;
-      left:30%;
-    }
-    .stepsFab{
-      position:absolute;
-      bottom:5%;
-      left:5%;
-    }
-    .goalProgress{
-      width:100%;
-    }
-    .goalDetails{
-      width:90%;
-      margin:20px 5% 20px 5%;
-    }
-    .editButton{
-      margin-top:-20px;
-    }
-  </style>
+    <style include="common-styles">
+      :host{
+        --app-grid-columns:3;
+        --app-grid-item-height:150%;
+      }
+      .goalLabel{
+        width:25%;
+        position:absolute;
+        bottom:10px;
+        left:10px;
+        padding:0px;
+        margin:0px;
+        font-weight:bold;
+        color:#FFFFFF;
+        font-size:20px;
+      }
+      .goalMore{
+        position:absolute;
+        top:10px;
+        right:10px;
+        color:#FFFFFF;
+      }
+      .goalBox{
+        margin:20px;
+      }
+      .goalHeading{
+        width:100%;
+        height:40%;
+        margin-bottom:4%;
+        position:relative;
+        background-repeat:no-repeat;
+        background-size:cover;
+        background-position:bottom right;
+      }
+      .goalDescription{
+        text-align:center;
+        font-size:18px;
+        height:38%;
+        margin:4%;
+        overflow:hidden;
+      }
+      .goalSteps:{
+        width:100%;
+        height:10%;
+        margin:4%;
+      }
+      .goalStepsText{
+        position:absolute;
+        bottom:5%;
+        left:30%;
+      }
+      .stepsFab{
+        position:absolute;
+        bottom:5%;
+        left:5%;
+      }
+      .goalProgress{
+        width:100%;
+      }
+      .goalDetails{
+        width:90%;
+        margin:20px 5% 20px 5%;
+      }
+      .editButton{
+        margin-top:-20px;
+      }
+    </style>
 
-  <paper-dialog horizontal-align="left" vertical-align="top" id="editModal">
-    <paper-button on-tap="editGoal">edit</paper-button>
-    <br />
-    <paper-button on-tap="deleteGoal">delete</paper-button>
-  </paper-dialog>
+    <paper-dialog horizontal-align="left" vertical-align="top" id="editModal">
+      <paper-button on-tap="editGoal">edit</paper-button>
+      <br />
+      <paper-button on-tap="deleteGoal">delete</paper-button>
+    </paper-dialog>
 
-  <paper-card class="app-grid" has-aspect-ratio>
+    <paper-card class="app-grid" has-aspect-ratio>
 
-    <template id="goalRepeat" is="dom-repeat" items="[[goalsData]]" as="goal">
-      {{_computeQueryCount(goal)}}
+      <template id="goalRepeat" is="dom-repeat" items="[[goalsData]]" as="goal">
+        {{_computeQueryCount(goal)}}
 
-      <div class="goalBoxContainer">
+        <div class="goalBoxContainer">
 
-        <paper-card elevation="3" class="goalBox">
+          <paper-card elevation="3" class="goalBox">
 
-          <div style="background-image:url(../../../../{{_computeGoalImage(goal.category)}})" class="goalHeading">
-            <p class="goalLabel">
-              [[goal.category]]
-            </p>
-          </div>
+            <div style="background-image:url(../../../../{{_computeGoalImage(goal.category)}})" class="goalHeading">
+              <p class="goalLabel">
+                [[goal.category]]
+              </p>
+            </div>
 
-          <div class="goalDescription">
-              [[goal.description]]
-          </div>
+            <div class="goalDescription">
+                [[goal.description]]
+            </div>
 
-          <paper-icon-button
-            icon="icons:more-vert"
-            class="goalMore"
-            on-tap="toggleEditModal">
-          </paper-icon-button>
+            <paper-icon-button
+              icon="icons:more-vert"
+              class="goalMore"
+              on-tap="toggleEditModal">
+            </paper-icon-button>
 
 
-          <div class="goalSteps">
-            <paper-progress
-              class="goalProgress"
-              min="0"
-              max="{{_computeSteps(goal.steps)}}"
-              value="{{_computeCompleteSteps(goal.steps)}}">
-            </paper-progress>
+            <div class="goalSteps">
+              <paper-progress
+                class="goalProgress"
+                min="0"
+                max="{{_computeSteps(goal.steps)}}"
+                value="{{_computeCompleteSteps(goal.steps)}}">
+              </paper-progress>
 
-            <paper-fab
-              label="{{_computeSteps(goal.steps)}}"
-              class="stepsFab">
-            </paper-fab>
+              <paper-fab
+                label="{{_computeSteps(goal.steps)}}"
+                class="stepsFab">
+              </paper-fab>
 
-            <p class="goalStepsText">
-              STEPS
-            </p>
+              <p class="goalStepsText">
+                STEPS
+              </p>
 
-          </div>
+            </div>
 
-        </paper-card>
+          </paper-card>
 
-      </div>
+        </div>
 
-    </template>
+      </template>
 
-  </paper-card>
+    </paper-card>
 
   </template>
 
@@ -171,7 +177,8 @@
         }
       },
       behaviors:[
-        Polymer.multiEditBehavior
+        Polymer.multiViewResizeBehavior,
+        Polymer.multiEditAnimationBehavior
       ],
       editGoal:function(e){
         this.fire("editGoal");
