updated polymer paths to correct values

--- a/src/behaviors/simple-view-resize-behavior.html
+++ b/src/behaviors/simple-view-resize-behavior.html
@@ -1,11 +1,11 @@
-<link rel="import" href="../../../bower_components/polymer/polymer.html" />
+<link rel="import" href="../../bower_components/polymer/polymer.html" />
 
 <script>
 
   (function(){
     "use-strict";
     Polymer.simpleViewResizeBehavior={
-      is="simple-view-resize-behavior",
+      is:"simple-view-resize-behavior",
 
     };
 
