--- a/src/behaviors/multi-edit-animation-behavior.html
+++ b/src/behaviors/multi-edit-animation-behavior.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html" />
+<link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html"/>
 
 <!--perhaps dynamically load these in later... need to find a way to do this with the build process-->
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html" />
